fixed print layout bug, when left sided annotation is set for div container.

--- a/documentation/_layout/style.css
+++ b/documentation/_layout/style.css
@@ -302,6 +302,7 @@ div.sp-edit {
 	border-width: 0.4em;
 	border-style: none none none solid;
 	padding-left: 0.75em;
+	margin-left: 10px;
 }
 
 div.sp-del {
@@ -321,12 +322,14 @@ div.sp-add span.title,
 div.sp-edit span.title {
 	text-align: right;
 	width: 300px;
+	height: 0px;
 	display: block;
 	font-weight: bold;
-	position: absolute;
-	margin-left: -180px;
-	margin-top: 140px;
-	margin-right: 0px;
+	position: relative;
+	padding-right: 310px;
+	margin-left: -345px;
+	margin-top: 0px;
+	margin-right: 100px;
 	margin-bottom: 0px;
 	writing-mode:tb-rl;
 	-webkit-transform:rotate(270deg);
